layout breaking fix

--- a/styles.css
+++ b/styles.css
@@ -1,6 +1,6 @@
 @font-face {
     font-family: 'DM Sans';
-    src: url('assets/fonts/DMSans-VariableFont_opsz\,wght.ttf') format('truetype'); 
+    src: url('assets/fonts/DMSans-VariableFont_opsz,wght.ttf') format('truetype'); 
     font-weight: 100 900;
     font-style: normal;
 }
@@ -15,9 +15,10 @@ body {
 }
 .grid-container {
     padding: 1rem;
-    display: flex;
-    flex-direction: column;
+    display: grid;
+    grid-template-columns: 1fr;
     gap: 1rem;
+    margin: 0 auto;
     background-color:  hwb(0 96% 3%);
     box-shadow: 0 8px 16px #bfe0df;
 }
@@ -210,8 +211,9 @@ h1 .gold {
     
  }
 
- @media (min-width: 670px) {
+ @media (min-width: 780px) {
     .grid-container {
+        margin: 0 auto;
         display: grid;
         grid-template-columns: repeat(2, 1fr);
         gap: 20px;
@@ -219,21 +221,26 @@ h1 .gold {
 
  }
 
- @media (min-width: 965px) {
+ @media (min-width: 999px) {
     body {
         display: flex;
         align-items: center;
         justify-content: center;
         flex-direction: column;
-        height: 100vh;
+        min-height: 100vh;
+        margin: auto;
     }
     h1,h2 {
         font-size: 35px;
     }
     .grid-container {
-        max-width: 1100px;
+        max-width: 1200px;
+        width: 100%;
+        margin: 0 auto;
         grid-template-columns: repeat(4, 1fr);
         /* align-items: center; */
+        padding: 2rem;
+        align-content: center;
         grid-template-areas: 
             "seven one one four"
             "seven two three four"
@@ -248,7 +255,10 @@ h1 .gold {
         flex-direction: row;
     }
     .AI-content-creation {grid-area: eight;}
-    .schedule-maintainance {grid-area: three;}
+    .schedule-maintainance {
+        grid-area: three;
+        /* font-size: 30px; */
+    }
     .account-management {grid-area: two;}
     .faster-audience {grid-area: six;}
     
